[package]
name = "solana-keypair-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
solana-sdk = "1.18"
spl-token = "4.0"
base64 = "0.21"
